@@ -1,3 +1,10 @@
+(27/09/14)
+==========
+
+· Added Emula > MSX
+
+· Added Others > Check SD partition
+
 (16/09/14)
 ==========
 
